--- a/site/test.html
+++ b/site/test.html
@@ -8,6 +8,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
-  whats up dude
+  こんにちは、世界
   </body>
 </html>
